# tt-ai

./: .env  .gitignore  credentials.json  gen_kit.py  pyproject.toml  requirements.txt  setup.py
auto_subtitle/: gen_kit.py  utils.py
meow_ttai/: __init__.py  gen_cli.py  gen_kit.py  utils.py
tests/: batchfarm.py  cute-dl.py  dlkit.py  encoder.py  ft-r0.txt  jparse.py  jsonl_maker.py  librespot_test.py  pdub-split.py  poe_test.py  seg_fmt.py  tokenizer.py  yshort.py  yshort_bg_dl.py  yshort_fingerdown.py  yshort_to_gpt_jsonl.py  yt-sel.js
ttai_farm/: __init__.py  cli.py  console.py  editor.py  utils.py
ttai_farm/analysis/: __init__.py  definition.py  local.py  openai.py  paste.py  poe.py
ttai_farm/analysis/prompts/: claude.r1.txt  claude.r2.txt  claude.r3.txt  facts.r9.txt
ttai_farm/farm/: __init__.py  clipper.py  download_spotify.py  download_video.py  farm.py  threaded_downloader.py  transcribe.py
ttai_farm/v4/: tts.py  write_ass.py
watermarks/: f-plug-wm.psd
